# Sisop2

./: .gitignore  CMakeLists.txt  README.md  TODO.md  TODO.txt  tests.sh
client/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  payload.cpp  serializer.cpp  sock.cpp  user_server.cpp  utils.cpp
lib/include/: defines.hpp  exceptions.hpp  mutex.hpp  payload.hpp  serializer.hpp  sock.hpp  user_server.hpp  utils.hpp
lib/schemas/: monster.fbs  packet.fbs
server/: CMakeLists.txt  controller.cpp  election_manager.cpp  main.cpp
server/include/: controller.hpp  election_manager.hpp
tests/: clear.sh  testfile.txt
tests/client/: testfile.txt
tests/server1/: server1.txt
tests/server2/: server2.txt
tests/server3/: server3.txt
tests/sync_dir/: test.txt
